--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,17 @@ html * {
   box-sizing: border-box;
 }
 
+main > p {
+  color: white;
+  margin-bottom: 15px;
+  line-height: 25px;
+  font-size: 18px;
+}
+main{
+  width: 60%;
+  margin: 0 auto;
+}
+
 body {
   font-size: 100%;
   font-family: "Source Sans Pro", sans-serif;
