--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ Main components
 header {
   position: relative;
   height: 200px;
-  background: #eff2f6;
+  background: lightgrey;
   text-align: center;
   margin-bottom: 1em;
   padding-top: 3em;
